‘O_CLOEXEC’ undeclared (first use in this function)
glib 2.57.2 fails to build on Mac OS X 10.6 and earlier with this error:
gspawn.c: In function ‘do_posix_spawn’:
gspawn.c:1453: error: ‘O_CLOEXEC’ undeclared (first use in this function)
This problem is new for 2.57.2; 2.57.1 didn't have this problem.
Similar problems have cropped up in glib before (https://bugzilla.gnome.org/show_bug.cgi?id=769042, https://bugzilla.gnome.org/show_bug.cgi?id=712136).
O_CLOEXEC
was not added to Mac OS X until version 10.7 so it would be nice if you could add a workaround for older systems that don't have this defined, such as what was done to resolve the previous problems. Thanks.